app/assets/stylesheets/_static.scss
/* ************************************
STATIC PAGES
************************************ */

$gh-yellow: #ffde00;
$gh-green: #367c2b;

#gh-static-wrapper {
  height: 100vh;
  background: url("lawn_mower.jpeg") no-repeat center center fixed;
  background-size: cover;
  background-color: $gh-green;
  margin: 0;
  display: flex;
  align-items: flex-end;
}

#marquee {
  margin: 150px;
}

#marquee > h1 {
  font-size: 7.5em;
}

#marquee > h3 {
  font-size: 2.5em;
}

#marquee > h2 {
  font-size: 4em;
}

#marquee > h4 {
  font-size: 2.5em;
}

.static-text {
  color: $gh-yellow;
  font-weight: 450;
}

#marquee > ul > li > a {
  color: $gh-yellow;
  font-size: 1.8em;
}

